[package]
name = "GeometryDash"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.27.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.135"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
